<resources>
    <string name="app_name">BrainTrainer</string>
    <string name="about">O aplikaci</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actualLevel">Aktualni level</string>
    <string name="actualLevelDefault">1</string>
    <string name="gameName">Hra:</string>
    <string name="actualGameLevel">Level:</string>
    <string name="remainingRepeats">Pocet pokusu:</string>
    <string name="gameOver">Konec Hry</string>
    <string name="menu">Menu</string>
    <string name="score">Score</string>
    <string name="mathCorrectLabel">Je to spravne?</string>
    <string name="correctButton">Spravne</string>
    <string name="incorrectButton">Spatne</string>
</resources>
